// Tipos de mídia suportados pelo player
export enum MediaType {
  UNKNOWN = 'unknown',
  VOD = 'vod',
  LIVE = 'live',
  ADVERTISEMENT = 'advertisement',
  AUDIO = 'audio',
}